--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<link href="assets/css/plugins.css" rel="stylesheet" type="text/css">
 		<link href="assets/css/style.css" rel="stylesheet" type="text/css">
 	</head>
-	<body class="preloader cursor-anim-enable dark-nav">
+	<body class="preloader cursor-anim-enable landing-page">
 		<!-- preloader-loading start -->
 		<div class="preloader__logoload-box">
 			<img class="preloader__logo" src="assets/images/logo/logo-white.png" alt="logo">
@@ -134,6 +134,28 @@
 		</header><!-- header end -->
 
 		<!-- navigation start -->
+		<nav class="landing-nav js-midnight-color">
+			<ul class="landing-nav__flex">
+				<li class="landing-nav__btn">
+					<a href="#up" class="landing-nav__inner js-smooth-scroll js-pointer-large">Home</a>
+				</li>
+				<li class="landing-nav__btn">
+					<a href="#down" class="landing-nav__inner js-smooth-scroll js-pointer-large">About</a>
+				</li>
+				<li class="landing-nav__btn">
+					<a href="#models" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
+				</li>
+				<li class="landing-nav__btn">
+					<a href="#projects" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
+				</li>
+				<li class="landing-nav__btn">
+					<a href="#blog" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
+				</li>
+				<li class="landing-nav__btn">
+					<a href="#contact" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
+				</li>
+			</ul>
+		</nav><!-- landing-nav end -->
 		<nav class="nav-container pos-rel js-dropdown-active-box">
 			<!-- pos-rel start -->
 			<div class="pos-rel height-100perc">
@@ -250,13 +272,13 @@
 							<div class="container small padding-top-bottom-120">
 								<h2 class="headline-xl">
 									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-02">We Generate</span>
+										<span class="anim-slide tr-delay-02">DAX <span class="text-color-red">Creative</span></span>
 									</span>
 									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-03">Creative &</span>
+										<span class="anim-slide tr-delay-03">Think <span class="text-color-red">|</span> Plan <span class="text-color-red">|</span> Create</span>
 									</span>
 									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-04">Novation Ideas</span>
+										<!-- <span class="anim-slide tr-delay-04">Creative | Unique | Brand</span> -->
 									</span>
 								</h2>
 								<div class="margin-top-30 anim-fade tr-delay-08">
@@ -282,14 +304,14 @@
 							<div class="container small padding-top-bottom-120">
 								<h2 class="headline-xl">
 									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-02">We Generate</span>
+										<span class="anim-slide tr-delay-02">Digital <span class="text-color-red">Marketing</span> </span>
 									</span>
-									<span class="hidden-box d-block">
+									<!-- <span class="hidden-box d-block">
 										<span class="anim-slide tr-delay-03">Creative &</span>
-									</span>
-									<span class="hidden-box d-block">
+									</span> -->
+									<!-- <span class="hidden-box d-block">
 										<span class="anim-slide tr-delay-04">Novation Ideas</span>
-									</span>
+									</span> -->
 								</h2>
 								<div class="margin-top-30 anim-fade tr-delay-08">
 									<a href="#" class="border-btn js-pointer-large">
@@ -314,14 +336,14 @@
 							<div class="container small padding-top-bottom-120">
 								<h2 class="headline-xl">
 									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-02">We Generate</span>
+										<span class="anim-slide tr-delay-02"><span class="text-color-red">Development</span></span>
 									</span>
 									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-03">Creative &</span>
+										<span class="anim-slide tr-delay-03">Website | Android | IOS</span>
 									</span>
-									<span class="hidden-box d-block">
+									<!-- <span class="hidden-box d-block">
 										<span class="anim-slide tr-delay-04">Novation Ideas</span>
-									</span>
+									</span> -->
 								</h2>
 								<div class="margin-top-30 anim-fade tr-delay-08">
 									<a href="#" class="border-btn js-pointer-large">
@@ -346,14 +368,14 @@
 							<div class="container small padding-top-bottom-120">
 								<h2 class="headline-xl">
 									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-02">We Generate</span>
+										<span class="anim-slide tr-delay-02">Graphic <span class="text-color-red">Designing</span></span>
 									</span>
-									<span class="hidden-box d-block">
+									<!-- <span class="hidden-box d-block">
 										<span class="anim-slide tr-delay-03">Creative &</span>
-									</span>
-									<span class="hidden-box d-block">
+									</span> -->
+									<!-- <span class="hidden-box d-block">
 										<span class="anim-slide tr-delay-04">Novation Ideas</span>
-									</span>
+									</span> -->
 								</h2>
 								<div class="margin-top-30 anim-fade tr-delay-08">
 									<a href="#" class="border-btn js-pointer-large">
@@ -378,14 +400,14 @@
 							<div class="container small padding-top-bottom-120">
 								<h2 class="headline-xl">
 									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-02">We Generate</span>
+										<span class="anim-slide tr-delay-02">Softwate Solution</span>
 									</span>
-									<span class="hidden-box d-block">
+									<!-- <span class="hidden-box d-block">
 										<span class="anim-slide tr-delay-03">Creative &</span>
-									</span>
-									<span class="hidden-box d-block">
+									</span> -->
+									<!-- <span class="hidden-box d-block">
 										<span class="anim-slide tr-delay-04">Novation Ideas</span>
-									</span>
+									</span> -->
 								</h2>
 								<div class="margin-top-30 anim-fade tr-delay-08">
 									<a href="#" class="border-btn js-pointer-large">
@@ -411,16 +433,16 @@
 							<div class="container small text-center padding-top-bottom-120">
 								<h2 class="headline-xl">
 									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-02">We’r Provided</span>
+										<span class="anim-slide tr-delay-02">AD Production</span>
 									</span>
-									<span class="hidden-box d-block">
+									<!-- <span class="hidden-box d-block">
 										<span class="anim-slide tr-delay-03">
 											<span class="text-color-red">Best</span> Digital
 										</span>
-									</span>
-									<span class="hidden-box d-block">
+									</span> -->
+									<!-- <span class="hidden-box d-block">
 										<span class="anim-slide tr-delay-04 text-color-red">Services</span>
-									</span>
+									</span> -->
 								</h2>
 								<div class="margin-top-30 anim-fade tr-delay-08">
 									<a href="#" class="border-btn js-pointer-large">
@@ -445,14 +467,46 @@
 							<div class="container small padding-top-bottom-120">
 								<h2 class="headline-xl">
 									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-02">Best Solutions</span>
+										<span class="anim-slide tr-delay-02">	<span class="text-color-red">Premium</span></span>
 									</span>
 									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-03">& Ideas for</span>
+										<span class="anim-slide tr-delay-03">Content Writing</span>
 									</span>
-									<span class="hidden-box d-block">
+									<!-- <span class="hidden-box d-block">
 										<span class="anim-slide tr-delay-04">Your Business</span>
+									</span> -->
+								</h2>
+								<div class="margin-top-30 anim-fade tr-delay-08">
+									<a href="#" class="border-btn js-pointer-large">
+										<span class="border-btn__inner">Read more</span>
+										<span class="border-btn__lines-1"></span>
+										<span class="border-btn__lines-2"></span>
+									</a>
+								</div>
+							</div>
+						</div><!-- content end -->
+					</div><!-- swiper-slide end -->
+
+					<!-- swiper-slide start -->
+					<div class="swiper-slide">
+						<!-- slide-bg -->
+						<div class="js-parallax-slide-bg bg-img-cover" style="background-image:url(assets/images/projects/black-bike/josh-nuttall-pIwu5XNvXpk-unsplash.jpg)"></div>
+						<!-- bg-overlay -->
+						<div class="bg-overlay-black"></div>
+
+						<!-- content start -->
+						<div class="flex-min-height-100vh pos-rel" data-swiper-parallax-x="30%">
+							<div class="container small padding-top-bottom-120">
+								<h2 class="headline-xl">
+									<span class="hidden-box d-block">
+										<span class="anim-slide tr-delay-02">	<span class="text-color-red">Academy</span></span>
 									</span>
+									<!-- <span class="hidden-box d-block">
+										<span class="anim-slide tr-delay-03">Content Writing</span>
+									</span> -->
+									<!-- <span class="hidden-box d-block">
+										<span class="anim-slide tr-delay-04">Your Business</span>
+									</span> -->
 								</h2>
 								<div class="margin-top-30 anim-fade tr-delay-08">
 									<a href="#" class="border-btn js-pointer-large">
@@ -635,42 +689,68 @@
 								<!-- swiper-wrapper start -->
 								<div class="swiper-wrapper">
 									<!-- swiper-slide start -->
-									<div class="swiper-slide">
+									<div class="swiper-slide test">
 										<div class="margin-left-right-10">
-											<h3 class="headline-xxxs">UI/UX Design</h3>
-											<p class="body-text-s margin-top-20">Shoreditch cliche marfa godard gochujang kinfolk hoodie you probably haven't heard of them echo park DIY tilde PBR&B. Lomo dreamcatcher bushwick gastropub swag. Hammock sriracha paleo, iPhone swag af flexitarian hella pickled neutra pug. Trust fund chicharrones iPhone stumptown chia. Godard 3 wolf moon tacos try-hard, raw denim locavore messenger bag portland. Blue bottle hashtag schlitz etsy knausgaard, aesthetic tacos freegan lomo deep v fashion axe.</p>
+											<h3 class="headline-xxxs">GRAPHIC DESIGNING</h3>
+											<p class="body-text-s margin-top-20">
+												We can attracte customers towards your business with a strong brand look & plan of action. utilize our graphic design skills and let's brand or rebrand your business now.
+												<br><br><br>
+											</p>
 										</div>
 									</div><!-- swiper-slide end -->
 
 									<!-- swiper-slide start -->
-									<div class="swiper-slide">
+									<div class="swiper-slide test">
 										<div class="margin-left-right-10">
-											<h3 class="headline-xxxs">Graphic Design</h3>
-											<p class="body-text-s margin-top-20">Pinterest lumbersexual forage chillwave godard pitchfork vexillologist deep v chia truffaut four dollar toast food truck meditation. Hot chicken coloring book cliche YOLO, crucifix kale chips swag hexagon raclette paleo next level austin. Yuccie thundercats irony prism man braid narwhal mustache taxidermy chillwave. Polaroid af ethical green juice, PBR&B kale chips chicharrones mixtape wayfarers air plant. Godard taxidermy deep v, VHS portland poke prism.</p>
+											<h3 class="headline-xxxs">DIGITAL MARKETING</h3>
+											<p class="body-text-s margin-top-20">
+												The digital marketing team at DAX provide suitable marketing solutions to businesses. Boosting your business growth by creating brand awareness and generating leads through various digital marketing services.
+												<br><br>
+											</p>
 										</div>
 									</div><!-- swiper-slide end -->
 
 									<!-- swiper-slide start -->
-									<div class="swiper-slide">
+									<div class="swiper-slide test">
 										<div class="margin-left-right-10">
-											<h3 class="headline-xxxs">Front-end Development</h3>
-											<p class="body-text-s margin-top-20">Pitchfork green juice meh ethical slow-carb poke authentic salvia skateboard helvetica tousled bicycle rights ennui. Hot chicken ugh drinking vinegar, edison bulb dreamcatcher meh craft beer offal tousled gluten-free locavore. Franzen schlitz gochujang organic +1, godard tacos. Whatever heirloom lyft drinking vinegar. Lyft synth letterpress kinfolk aesthetic shaman banjo hell of. Single-origin coffee aesthetic cray try-hard, williamsburg vegan air plante.</p>
+											<h3 class="headline-xxxs">WEB DESIGN & DEVELOPMENT</h3>
+											<p class="body-text-s margin-top-20">
+												Our profiled expertise with improved softwares, design, develop, maintain and promote websites with starring user satisfaction.
+												<br><br><br><br>
+											</p>
 										</div>
 									</div><!-- swiper-slide end -->
 
 									<!-- swiper-slide start -->
-									<div class="swiper-slide">
+									<div class="swiper-slide test">
 										<div class="margin-left-right-10">
-											<h3 class="headline-xxxs">Back-end Development</h3>
-											<p class="body-text-s margin-top-20">Shoreditch cliche marfa godard gochujang kinfolk hoodie you probably haven't heard of them echo park DIY tilde PBR&B. Lomo dreamcatcher bushwick gastropub swag. Hammock sriracha paleo, iPhone swag af flexitarian hella pickled neutra pug. Trust fund chicharrones iPhone stumptown chia. Godard 3 wolf moon tacos try-hard, raw denim locavore messenger bag portland. Blue bottle hashtag schlitz etsy knausgaard, aesthetic tacos freegan lomo deep v fashion axe.</p>
+											<h3 class="headline-xxxs">APP DEVELOPMENT & MARKETING</h3>
+											<p class="body-text-s margin-top-20">
+												At DAX, our programmers will help you build and optimize an "App" with an eye-catching user interface that is efficient and easy-to-use. This will provide ease of access to the services you have to offer and improve customer interactions with your business.
+												<br>
+											</p>
 										</div>
 									</div><!-- swiper-slide end -->
 
 									<!-- swiper-slide start -->
-									<div class="swiper-slide">
+									<div class="swiper-slide test">
 										<div class="margin-left-right-10">
-											<h3 class="headline-xxxs">Web Design</h3>
-											<p class="body-text-s margin-top-20">Pinterest lumbersexual forage chillwave godard pitchfork vexillologist deep v chia truffaut four dollar toast food truck meditation. Hot chicken coloring book cliche YOLO, crucifix kale chips swag hexagon raclette paleo next level austin. Yuccie thundercats irony prism man braid narwhal mustache taxidermy chillwave. Polaroid af ethical green juice, PBR&B kale chips chicharrones mixtape wayfarers air plant. Godard taxidermy deep v, VHS portland poke prism.</p>
+											<h3 class="headline-xxxs">AD PRODUCTION</h3>
+											<p class="body-text-s margin-top-20">
+												Video marketing is a powerful means for promoting anything you want online, whether it’s a product, service, opt-in form, website, blog, etc. Videos are now an expected component of any website.
+												<br><br>
+											</p>
+										</div>
+									</div><!-- swiper-slide end -->
+
+									<!-- swiper-slide start -->
+									<div class="swiper-slide test">
+										<div class="margin-left-right-10">
+											<h3 class="headline-xxxs">SOFTWARE SOLUTIONS</h3>
+											<p class="body-text-s margin-top-20">
+												We are delivering complex web solutions and online platform for our valuable clients. Our dedicated and experienced team works directly with our clients to build a universal product and help them develop their customer growth.
+												<br><br>
+											</p>
 										</div>
 									</div><!-- swiper-slide end -->
 								</div><!-- swiper-wrapper end -->
@@ -1091,7 +1171,9 @@
 								<!-- swiper-slide start -->
 								<div class="swiper-slide slide-scale-anim">
 									<div class="margin-left-right-20 padding-left-right-20 padding-top-bottom-40 content-bg-light-2 border-radius-10px">
-										<p class="margin-bottom-30 quote quote_bottom body-text-m text-color-black text-center">Pok pok authentic fashion axe, vegan venmo leggings raclette tousled twee tattooed. Banh mi humblebrag hammock tacos fashion axe aesthetic vegan sustainable taiyaki thundercats jean shorts tousled cloud bread waistcoat kogi. Cloud bread cardigan messenger bag raw.</p>
+										<p class="margin-bottom-30 quote quote_bottom body-text-m text-color-black text-center">
+											Pok pok authentic fashion axe, vegan venmo leggings raclette tousled twee tattooed. Banh mi humblebrag hammock tacos fashion axe aesthetic vegan sustainable taiyaki thundercats jean shorts tousled cloud bread waistcoat kogi. Cloud bread cardigan messenger bag raw.
+										</p>
 										<!-- anim-img-scale start -->
 										<div class="anim-img-scale testimonials-author border-radius-50perc">
 											<img class="anim-img-scale__inner" src="assets/images/testimonials/woman-wearing-white-and-black-shirt-1388888.jpg" alt="author">
@@ -1183,14 +1265,15 @@
 			</section><!-- testimonials end -->
 
 			<!-- video content start -->
-			<div class="pos-rel bg-img-cover height-100vh" style="background-image:url(assets/images/projects/neon-lights/woman-wearing-beige-and-gray-hoodie-portrait-2272855.jpg)">
+			<!-- <div class="pos-rel bg-img-cover height-100vh" style="background-image:url(assets/images/projects/neon-lights/woman-wearing-beige-and-gray-hoodie-portrait-2272855.jpg)">
 				<div class="bg-overlay-black"></div>
 				<div class="pos-rel height-100perc">
 					<a href="https://www.youtube.com/watch?v=hitNXU4PoRU" class="play-button js-popup-youtube js-pointer-large">
 						<span class="play-button__inner"></span>
 					</a>
 				</div>
-			</div><!-- video content end -->
+			</div> -->
+			<!-- video content end -->
 
 			<!-- latest news start -->
 			<section class="pos-rel section-bg-light-2" data-midnight="black">
