--- a/index.html
+++ b/index.html
@@ -1049,64 +1049,64 @@
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/balancha.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/balancha-red.png" alt="clients logo">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/am.png" alt="clients logo">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/am-red.png" alt="clients logo">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/jorgo.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/jorgo-red.png" alt="clients logo">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/arm.png" alt="clients logo">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/arm-red.png" alt="clients logo">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/judoboy.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/judoboy-red.png" alt="clients logo">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/maithri.png" alt="clients logo">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/maithri-red.png" alt="clients logo">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/kizil-jindi.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/kizil-jindi-red.png" alt="clients logo">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/carclub.png" alt="clients logo">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/carclub-red.png" alt="clients logo">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/meyman.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/meyman-red.png" alt="clients logo">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/cnn.png" alt="clients logo">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/cnn-red.png" alt="clients logo">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/olchobay.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/olchobay-red.png" alt="clients logo">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/cpg.png" alt="clients logo">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/cpg-red.png" alt="clients logo">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/tamaktan.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/tamaktan-red.png" alt="clients logo">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/edu-wings.png" alt="clients logo">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/edu-wings-red.png" alt="clients logo">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/chayhana.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/chayhana-red.png" alt="clients logo">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/find-the-one.png" alt="clients logo">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/find-the-one-red.png" alt="clients logo">
 								</div>
 							</div><!-- clients-lines__column end -->
 
@@ -1121,16 +1121,16 @@
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/eptep-septep.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/eptep-septep-red.png" alt="clients logo">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/nsm.png" alt="clients logo">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/nsm-red.png" alt="clients logo">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/guldoyjan.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/guldoyjan-red.png" alt="clients logo">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/lancaster.png" alt="clients logo">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/lancaster-red.png" alt="clients logo">
 								</div>
 							</div><!-- clients-lines__column end -->
 
@@ -1451,6 +1451,9 @@
 									<a href="#" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
 								</li>
 								<li>
+									<a href="#" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
+								</li>
+								<li>
 									<a href="#" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
 								</li>
 								<li>
@@ -1467,7 +1470,7 @@
 							<div class="column-l-r-margin-10">
 								<div class="headline-xxxxs">Email</div>
 								<div class="margin-top-10">
-									<a href="#" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">daxadvertise@gmail.com</a><br>
+									<a href="#" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">hello@daxads.com</a><br>
 									<!-- <a href="#" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">email@umaya_job.com</a> -->
 								</div>
 							</div>
