--- a/index.html
+++ b/index.html
@@ -1522,7 +1522,7 @@
 					<!-- footer-copyright start -->
 					<div class="footer-copyright text-center pos-abs pos-bottom-center">
 						<p class="copyright-style">
-							&copy; Copyright 2020 Dax. Developed By <a href="#" class="text-weight-700 js-pointer-small">Dax</a>
+							&copy; Copyright 2020 Dax. Developed By <a href="#" class="text-weight-700 js-pointer-small">Devil</a>
 						</p>
 					</div><!-- footer-copyright end -->
 				</div><!-- container end -->
