--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <!-- Mirrored from www.nurseitmukaytegin.com/envato-templates/umaya/home_creative-agency.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 05 Jan 2021 19:25:47 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
+
+		<meta property="og:url" content="https://thedaxads.com/"/>
+		<meta property="og:type" content="article"/>
+		<meta property="og:title" content="Dax"/>
+		<meta property="og:description" content="Creative Agency"/>
+		<meta property="og:image" content="assets/images/logo/logo-black.png"/>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="author" content="DAX">
@@ -137,22 +143,22 @@
 		<nav class="landing-nav js-midnight-color">
 			<ul class="landing-nav__flex">
 				<li class="landing-nav__btn">
-					<a href="#up" class="landing-nav__inner js-smooth-scroll js-pointer-large">Home</a>
+					<a href="index.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Home</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="#down" class="landing-nav__inner js-smooth-scroll js-pointer-large">About</a>
+					<a href="about-us.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">About</a>
 				</li>
 				<li class="landing-nav__btn">
 					<a href="#models" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="#projects" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
+					<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="#blog" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
+					<a href="blog.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="#contact" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
+					<a href="contact.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Contact</a>
 				</li>
 			</ul>
 		</nav><!-- landing-nav end -->
@@ -172,35 +178,42 @@
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="contact.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="index.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Home">Home</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="contact.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="about-us.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="About">About</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="contact.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="#" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Academy">Academy</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="contact.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="client.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+							<span class="nav-btn__inner" data-text="Academy">Client</span>
+						</a>
+					</li><!-- nav-btn-box end -->
+
+					<!-- nav-btn-box start -->
+					<li class="nav-btn-box">
+						<a href="blog.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Academy">Blog</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="contact.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="#" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Contact">Contact</span>
 						</a>
 					</li><!-- nav-btn-box end -->
@@ -214,7 +227,7 @@
 							<div class="headline-xxxxs nav-title-color nav-reveal-anim js-nav-anim">Email</div>
 						</div>
 						<div class="nav-fade-anim js-nav-anim margin-top-10">
-							<a href="#" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">daxadvertise@gmail.com</a><br>
+							<a href="mailto:hello@daxads.com" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">hello@daxads.com</a><br>
 							<!-- <a href="#" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">email@umaya_job.com</a> -->
 						</div>
 					</div><!-- nav-email end -->
@@ -227,8 +240,8 @@
 						<div class="nav-fade-anim js-nav-anim margin-top-10">
 							<a href="#" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">
 								DAX #1st Floor <br>
-								Arafa Complex , Aarat Road ,<br>
-								Kannur , Pin :670001
+								Arafa Complex, Aarat Road,<br>
+								Kannur, Pin :670001
 							</a>
 						</div>
 					</div><!-- nav-address end -->
@@ -239,8 +252,8 @@
 							<div class="headline-xxxxs nav-title-color nav-reveal-anim js-nav-anim">Phone</div>
 						</div>
 						<div class="nav-fade-anim js-nav-anim margin-top-10">
-							<a href="#" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">+91 8281447758</a><br>
-							<a href="#" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">+91 9447774937</a>
+							<a href="tel:918281447758" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">+91 8281447758</a><br>
+							<a href="tel:919447774937" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">+91 9447774937</a>
 						</div>
 					</div><!-- nav-phone end -->
 				</div><!-- nav-information end -->
@@ -1442,22 +1455,22 @@
 						<div class="four-columns footer-nav-mobile-padding">
 							<ul class="column-l-r-margin-10 footer-nav-list js-footer-hover-box">
 								<li>
-									<a href="#" class="footer-nav__btn js-pointer-small js-footer-hover-link">Home</a>
+									<a href="index.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Home</a>
 								</li>
 								<li>
-									<a href="#" class="footer-nav__btn js-pointer-small js-footer-hover-link">About</a>
+									<a href="about-us.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">About</a>
 								</li>
 								<li>
 									<a href="#" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
 								</li>
 								<li>
-									<a href="#" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
+									<a href="client.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
 								</li>
 								<li>
-									<a href="#" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
+									<a href="blog.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Blog</a>
 								</li>
 								<li>
-									<a href="#" class="footer-nav__btn js-pointer-small js-footer-hover-link">Contact</a>
+									<a href="contact.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Contact</a>
 								</li>
 							</ul>
 						</div><!-- column end -->
@@ -1480,7 +1493,7 @@
 							<div class="column-l-r-margin-10">
 								<div class="headline-xxxxs">Address</div>
 								<div class="margin-top-10">
-									<a href="#" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">
+									<a href="https://g.page/dax-ads-kannur?share" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">
 										DAX #1st Floor <br>
 										Arafa Complex , Aarat Road ,<br>
 										Kannur , Pin :670001
@@ -1493,8 +1506,8 @@
 							<div class="column-l-r-margin-10">
 								<div class="headline-xxxxs">Phone</div>
 								<div class="margin-top-10">
-									<a href="#" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">+91 8281447758</a><br>
-									<a href="#" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">+91 9447774937</a>
+									<a href="tel:918281447758" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">+91 8281447758</a><br>
+									<a href="tel:919447774937" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">+91 9447774937</a>
 								</div>
 							</div>
 						</div><!-- column end -->
